prusti/tests/verify/fail/no-annotations/never-type.rs
#![feature(never_type)]

fn diverging() -> ! {
    panic!();  //~ ERROR panic!(..) statement might panic
}

fn main() {
}
